--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -10,6 +10,12 @@ html {
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
+
+.container1{
+
+  background-color: #C0C0C0;
+  
+}
 body {
   margin: 0;
 }
